--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -325,6 +325,7 @@ test_fuzz_fuzz_SOURCES = \
  test/fuzz/spanparsing.cpp \
  test/fuzz/string.cpp \
  test/fuzz/strprintf.cpp \
+ test/fuzz/sv2_template_provider.cpp \
  test/fuzz/system.cpp \
  test/fuzz/timedata.cpp \
  test/fuzz/torcontrol.cpp \
