--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -158,9 +158,10 @@ BITCOIN_CORE_H = \
   blockfilter.h \
   blsct/arith/elements.h \
   blsct/arith/g1point.h \
-  blsct/arith/generators.h \
   blsct/arith/mcl_initializer.h \
-  blsct/arith/range_proof.h \
+  blsct/arith/range_proof/config.h \
+  blsct/arith/range_proof/generators.h \
+  blsct/arith/range_proof/range_proof.h \
   blsct/arith/scalar.h \
   blsct/keys.h \
   chain.h \
@@ -396,9 +397,9 @@ libbitcoin_node_a_SOURCES = \
   blockfilter.cpp \
   blsct/arith/elements.cpp \
   blsct/arith/g1point.cpp \
-  blsct/arith/generators.cpp \
   blsct/arith/mcl_initializer.cpp \
-  blsct/arith/range_proof.cpp \
+  blsct/arith/range_proof/generators.cpp \
+  blsct/arith/range_proof/range_proof.cpp \
   blsct/arith/scalar.cpp \
   blsct/keys.cpp \
   chain.cpp \
