--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -291,16 +291,16 @@ task:
     memory: 16G  # The default memory is sometimes just a bit too small, so double everything
   env:
     << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
-    FILE_ENV: "./ci/test/00_setup_env_native_multiprocess.sh"
+    FILE_ENV: "./ci/test/00_setup_env_i686_multiprocess.sh"
 
-# task:
-#   name: '[no wallet, libsyscoinkernel] [bionic]'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   container:
-#     image: ubuntu:bionic
-#   env:
-#     << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
-#     FILE_ENV: "./ci/test/00_setup_env_native_nowallet_libsyscoinkernel.sh"
+task:
+   name: '[no wallet, libsyscoinkernel] [bionic]'
+   << : *GLOBAL_TASK_TEMPLATE
+   container:
+     image: ubuntu:bionic
+   env:
+     << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
+     FILE_ENV: "./ci/test/00_setup_env_native_nowallet_libsyscoinkernel.sh"
 
 task:
   name: 'macOS 10.15 [gui, no tests] [focal]'
