--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -288,19 +288,19 @@ task:
   container:
     image: ubuntu:focal
     cpu: 4
-    memory: 16G  # The default memory is sometimes just a bit too small, so double everything
+    memory: 24G  # The default memory is sometimes just a bit too small, so double everything
   env:
     << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_i686_multiprocess.sh"
 
-task:
-   name: '[no wallet, libsyscoinkernel] [bionic]'
-   << : *GLOBAL_TASK_TEMPLATE
-   container:
-     image: ubuntu:bionic
-   env:
-     << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
-     FILE_ENV: "./ci/test/00_setup_env_native_nowallet_libsyscoinkernel.sh"
+# task:
+#    name: '[no wallet, libsyscoinkernel] [bionic]'
+#    << : *GLOBAL_TASK_TEMPLATE
+#    container:
+#      image: ubuntu:bionic
+#    env:
+#      << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
+#      FILE_ENV: "./ci/test/00_setup_env_native_nowallet_libsyscoinkernel.sh"
 
 task:
   name: 'macOS 10.15 [gui, no tests] [focal]'
