--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -84,6 +84,7 @@ BITCOIN_TESTS =\
   test/blsct/arith/g1point_tests.cpp \
   test/blsct/arith/scalar_tests.cpp \
   test/blsct/arith/bls_arith_integration_tests.cpp \
+  test/blsct/arith/range_proof/confid_tests.cpp \
   test/blsct/arith/range_proof/generators_tests.cpp \
   test/blsct/arith/range_proof/range_proof_tests.cpp \
   test/blsct/keys_tests.cpp \
