add bulletproofs range proof prove/verify/recover funtcions based on Scalar and G1Point

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -86,6 +86,7 @@ BITCOIN_TESTS =\
   test/blsct/arith/bls_arith_integration_tests.cpp \
   test/blsct/arith/range_proof/config_tests.cpp \
   test/blsct/arith/range_proof/generators_tests.cpp \
+  test/blsct/arith/range_proof/lazy_g1point_tests.cpp \
   test/blsct/arith/range_proof/range_proof_tests.cpp \
   test/blsct/keys_tests.cpp \
   test/bswap_tests.cpp \
