--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -410,6 +410,9 @@ obj/build.h: FORCE
 	@$(top_srcdir)/share/genbuild.sh "$(abs_top_builddir)/src/obj/build.h" \
 	  "$(abs_top_srcdir)"
 
+libsyscoin_util_a-clientversion.$(OBJEXT): obj/build.h
+
+
  # nevm
  nevm_libnevm_a_CPPFLAGS = $(AM_CPPFLAGS) $(SYSCOIN_INCLUDES)
  nevm_libnevm_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
