--- a/contrib/init/bitcoind.service
+++ b/contrib/init/bitcoind.service
@@ -14,8 +14,7 @@ Description=Bitcoin daemon
 Documentation=https://github.com/bitcoin/bitcoin/blob/master/doc/init.md
 
 # https://www.freedesktop.org/wiki/Software/systemd/NetworkTarget/
-After=network-online.target
-Wants=network-online.target
+After=network.target
 
 [Service]
 ExecStart=/usr/bin/bitcoind -daemonwait \
