tests: add heretical activation fuzz tester

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -390,7 +390,8 @@ test_fuzz_fuzz_SOURCES = \
  test/fuzz/txrequest.cpp \
  test/fuzz/utxo_snapshot.cpp \
  test/fuzz/utxo_total_supply.cpp \
- test/fuzz/validation_load_mempool.cpp
+ test/fuzz/validation_load_mempool.cpp \
+ test/fuzz/versionbits.cpp
 endif # ENABLE_FUZZ_BINARY
 
 nodist_test_test_bitcoin_SOURCES = $(GENERATED_TEST_FILES)
