--- a/configure.ac
+++ b/configure.ac
@@ -412,6 +412,7 @@ if test "$enable_werror" = "yes"; then
 fi
 
 if test "$CXXFLAGS_overridden" = "no"; then
+  WARN_CXXFLAGS="$WARN_CXXFLAGS -ferror-limit=100"
   AX_CHECK_COMPILE_FLAG([-Wall], [WARN_CXXFLAGS="$WARN_CXXFLAGS -Wall"], [], [$CXXFLAG_WERROR])
   AX_CHECK_COMPILE_FLAG([-Wextra], [WARN_CXXFLAGS="$WARN_CXXFLAGS -Wextra"], [], [$CXXFLAG_WERROR])
   AX_CHECK_COMPILE_FLAG([-Wgnu], [WARN_CXXFLAGS="$WARN_CXXFLAGS -Wgnu"], [], [$CXXFLAG_WERROR])
