--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -656,6 +656,8 @@ libbitcoin_consensus_a_SOURCES = \
   script/script.h \
   script/script_error.cpp \
   script/script_error.h \
+  script/txhash.cpp \
+  script/txhash.h \
   serialize.h \
   span.h \
   tinyformat.h \
@@ -974,6 +976,7 @@ libbitcoinkernel_la_SOURCES = \
   script/script_error.cpp \
   script/sigcache.cpp \
   script/solver.cpp \
+  script/txhash.cpp \
   signet.cpp \
   streams.cpp \
   support/cleanse.cpp \
