tests: Add txhash_test.cpp with OP_TXHASH test vectors

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -16,12 +16,12 @@ FUZZ_BINARY=test/fuzz/fuzz$(EXEEXT)
 
 JSON_TEST_FILES = \
   test/data/script_tests.json \
+  test/data/txhash_tests.json \
   test/data/bip341_wallet_vectors.json \
   test/data/base58_encode_decode.json \
   test/data/blockfilters.json \
   test/data/key_io_valid.json \
   test/data/key_io_invalid.json \
-  test/data/script_tests.json \
   test/data/sighash.json \
   test/data/tx_invalid.json \
   test/data/tx_valid.json
@@ -139,6 +139,7 @@ BITCOIN_TESTS =\
   test/script_segwit_tests.cpp \
   test/script_standard_tests.cpp \
   test/script_tests.cpp \
+  test/txhash_tests.cpp \
   test/scriptnum10.h \
   test/scriptnum_tests.cpp \
   test/serfloat_tests.cpp \
