test: Added RPC tests for compressrawtransaction and decompressrawtransaction, For valid assets_tests run compression tests, Added unit tests for new primitives

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -87,6 +87,7 @@ BITCOIN_TESTS =\
   test/coinstatsindex_tests.cpp \
   test/compilerbug_tests.cpp \
   test/compress_tests.cpp \
+  test/compressed_transaction_tests.cpp \
   test/crypto_tests.cpp \
   test/cuckoocache_tests.cpp \
   test/dbwrapper_tests.cpp \
