build: Remove HAVE_CONSENSUS_LIB
The `script/bitcoinconsensus` module defines the public interface for
the `bitcoinconsensus` library. Even though this module is only required
by the tests and the `bitcoinconsensus` library, it is currently
compiled into the static internal `libbitcoin_consensus` library, and
therefore used by a bunch of build targets that do not require it.

Since it is always part of the internal library, the
`HAVE_CONSENSUS_LIB` define used by the tests is essentially
meaningless, since the module is always available. This can be verified
on master by removing the `HAVE_CONSENSUS_LIB` checks in the tests,
configuring with `--with-libs=no`, and running `make check`.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -646,7 +646,6 @@ libbitcoin_consensus_a_SOURCES = \
   primitives/transaction.h \
   pubkey.cpp \
   pubkey.h \
-  script/bitcoinconsensus.cpp \
   script/interpreter.cpp \
   script/interpreter.h \
   script/script.cpp \
@@ -1013,7 +1012,7 @@ if BUILD_BITCOIN_LIBS
 lib_LTLIBRARIES += $(LIBBITCOINCONSENSUS)
 
 include_HEADERS = script/bitcoinconsensus.h
-libbitcoinconsensus_la_SOURCES = support/cleanse.cpp $(crypto_libbitcoin_crypto_base_la_SOURCES) $(libbitcoin_consensus_a_SOURCES)
+libbitcoinconsensus_la_SOURCES = script/bitcoinconsensus.cpp support/cleanse.cpp $(crypto_libbitcoin_crypto_base_la_SOURCES) $(libbitcoin_consensus_a_SOURCES)
 
 libbitcoinconsensus_la_LDFLAGS = $(AM_LDFLAGS) -no-undefined $(RELDFLAGS)
 libbitcoinconsensus_la_LIBADD = $(LIBSECP256K1)
