--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -351,6 +351,7 @@ test_fuzz_fuzz_SOURCES = \
  test/fuzz/strprintf.cpp \
  test/fuzz/system.cpp \
  test/fuzz/sv2_messages.cpp \
+ test/fuzz/sv2_template_provider.cpp \
  test/fuzz/timedata.cpp \
  test/fuzz/torcontrol.cpp \
  test/fuzz/transaction.cpp \
