--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -324,6 +324,7 @@ BITCOIN_CORE_H = \
   util/enumerate.h \
   util/epochguard.h \
   util/error.h \
+  util/expected.h \
   util/fastrange.h \
   util/fees.h \
   util/golombrice.h \
