--- a/contrib/containers/deploy/Dockerfile.GitHubActions.Release
+++ b/contrib/containers/deploy/Dockerfile.GitHubActions.Release
@@ -29,7 +29,7 @@ RUN mach=$(uname -m) \
       && case $mach in aarch64) arch="aarch64-linux-gnu"; ;; x86_64) arch="x86_64-linux-gnu"; ;;  *) echo "ERROR: Machine type $mach not supported."; ;; esac \
       && wget https://github.com/${GITHUB_REPOSITORY}/releases/download/v${TAG}/dashcore-${TAG}-$arch.tar.gz -P /tmp \
       && tar -xvf /tmp/dashcore-*.tar.gz -C /tmp/ \
-      && cp /tmp/dashcore*/bin/*  /usr/local/bin \
+      && find /tmp/dashcore*/bin -type f ! -name 'dash-qt' -exec cp {} /usr/local/bin \; \
       && rm -rf /tmp/dashcore* \
       && chmod a+x /usr/local/bin/*
 
