Added TODO to fix src/test/bip324_tests.cpp

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -79,7 +79,7 @@ BITCOIN_TESTS =\
   test/bech32_tests.cpp \
   test/bech32_mod_tests.cpp \
   test/bip32_tests.cpp \
-  # test/bip324_tests.cpp \
+  # test/bip324_tests.cpp \ TODO: NEED TO FIX THIS
   test/blockchain_tests.cpp \
   test/blockencodings_tests.cpp \
   test/blockfilter_index_tests.cpp \
