Added TODO to fix src/test/bip324_tests.cpp

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -65,6 +65,7 @@ if USE_NATPMP
 FUZZ_SUITE_LD_COMMON += $(NATPMP_LIBS)
 endif
 
+# test/bip324_tests.cpp \ TODO: NEED TO FIX THIS
 # test_navcoin binary #
 BITCOIN_TESTS =\
   test/addrman_tests.cpp \
@@ -79,7 +80,7 @@ BITCOIN_TESTS =\
   test/bech32_tests.cpp \
   test/bech32_mod_tests.cpp \
   test/bip32_tests.cpp \
-  # test/bip324_tests.cpp \ TODO: NEED TO FIX THIS
+  # test/bip324_tests.cpp \
   test/blockchain_tests.cpp \
   test/blockencodings_tests.cpp \
   test/blockfilter_index_tests.cpp \
