move-only: introduce common/transport.h
The proposed Stratum v2 integration introduces a new Transport subclass. This commit makes it easier in the future to move this integration to its own process.

net.cpp is currently part of libbitcoin_node. Avoid a dependency on the node by moving the Transport abstract class to common.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -138,6 +138,7 @@ BITCOIN_CORE_H = \
   common/args.h \
   common/bloom.h \
   common/init.h \
+  common/transport.h \
   common/run_command.h \
   common/sv2_noise.h \
   common/url.h \
@@ -678,6 +679,7 @@ libbitcoin_common_a_SOURCES = \
   common/sv2_noise.cpp \
   common/settings.cpp \
   common/system.cpp \
+  common/transport.cpp \
   compressor.cpp \
   core_read.cpp \
   core_write.cpp \
