--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -126,6 +126,7 @@ BITCOIN_TESTS =\
   test/raii_event_tests.cpp \
   test/random_tests.cpp \
   test/rbf_tests.cpp \
+  test/readwritefile_tests.cpp \
   test/rest_tests.cpp \
   test/result_tests.cpp \
   test/reverselock_tests.cpp \
