build: disable multiprocess build in gitlab CI
There's no actual multiprocess code yet, that's just part related to build system.
To test build add an option --enable-multiprocess to configure

So far as there's no real multiprocessing yet, let's save CPU money - last commit in this PR disables gitlab's CI temporary

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -204,15 +204,16 @@ x86_64-pc-linux-gnu-nowallet:
     HOST: x86_64-pc-linux-gnu
     DEP_OPTS: "NO_WALLET=1"
 
-# TODO: # Skip on non-depends, non-multiprocess PRs
-# if: type != pull_request OR commit_message =~ /depends:|multiprocess:/
-x86_64-pc-linux-gnu-multiprocess:
-  extends:
-    - .build-depends-template
-    - .skip-in-fast-mode-template
-  variables:
-    HOST: x86_64-pc-linux-gnu
-    DEP_OPTS: "MULTIPROCESS=1"
+## TODO: # Skip on non-depends, non-multiprocess PRs
+## if: type != pull_request OR commit_message =~ /depends:|multiprocess:/
+#x86_64-pc-linux-gnu-multiprocess:
+#  extends:
+#    - .build-depends-template
+#    - .skip-in-fast-mode-template
+#  variables:
+#    HOST: x86_64-pc-linux-gnu
+#    DEP_OPTS: "MULTIPROCESS=1"
+#
 
 x86_64-apple-darwin:
   extends:
@@ -309,14 +310,14 @@ linux64_nowallet-build:
   variables:
     BUILD_TARGET: linux64_nowallet
 
-linux64_multiprocess-build:
-  extends:
-    - .build-template
-    - .skip-in-fast-mode-template
-  needs:
-    - x86_64-pc-linux-gnu-multiprocess
-  variables:
-    BUILD_TARGET: linux64_multiprocess
+#linux64_multiprocess-build:
+#  extends:
+#    - .build-template
+#    - .skip-in-fast-mode-template
+#  needs:
+#    - x86_64-pc-linux-gnu-multiprocess
+#  variables:
+#    BUILD_TARGET: linux64_multiprocess
 
 #linux64_valgrind-build:
 #  extends:
@@ -381,14 +382,16 @@ linux64_ubsan-test:
   variables:
     BUILD_TARGET: linux64_ubsan
 
-linux64_multiprocess-test:
-  extends:
-    - .test-template
-    - .skip-in-fast-mode-template
-  needs:
-    - linux64_multiprocess-build
-  variables:
-    BUILD_TARGET: linux64_multiprocess
+# TODO: enable multiprocess back in CI once it has any value
+# or in case if any new backports to test
+#linux64_multiprocess-test:
+#  extends:
+#    - .test-template
+#    - .skip-in-fast-mode-template
+#  needs:
+#    - linux64_multiprocess-build
+#  variables:
+#    BUILD_TARGET: linux64_multiprocess
 
 #linux64_valgrind-test:
 #  extends:
