Updated BLSCT_H and BLSCT_CPP

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -147,17 +147,17 @@ if BUILD_BITCOIN_CHAINSTATE
 endif
 
 BLSCT_H = \
+  blsct/arith/elements.h \
+  blsct/arith/endianness.h \
   blsct/arith/mcl/mcl.h \
   blsct/arith/mcl/mcl_g1point.h \
   blsct/arith/mcl/mcl_init.h \
   blsct/arith/mcl/mcl_scalar.h \
   blsct/arith/mcl/mcl_util.h \
-  blsct/arith/elements.h \
-  blsct/arith/endianness.h \
   blsct/bech32_mod.h \
   blsct/building_block/fiat_shamir.h \
-  blsct/building_block/generator_deriver.h \
   blsct/building_block/g_h_gi_hi_zero_verifier.h \
+  blsct/building_block/generator_deriver.h \
   blsct/building_block/imp_inner_prod_arg.h \
   blsct/building_block/lazy_point.h \
   blsct/building_block/lazy_points.h \
@@ -166,19 +166,20 @@ BLSCT_H = \
   blsct/common.h \
   blsct/double_public_key.h \
   blsct/eip_2333/bls12_381_keygen.h \
+  blsct/external_api/blsct.h \
   blsct/private_key.h \
   blsct/public_key.h \
   blsct/public_keys.h \
   blsct/range_proof/bulletproofs/amount_recovery_request.h \
   blsct/range_proof/bulletproofs/amount_recovery_result.h \
+  blsct/range_proof/bulletproofs/range_proof.h \
   blsct/range_proof/bulletproofs/range_proof_logic.h \
   blsct/range_proof/bulletproofs/range_proof_with_transcript.h \
-  blsct/range_proof/bulletproofs/range_proof.h \
   blsct/range_proof/bulletproofs_plus/amount_recovery_request.h \
   blsct/range_proof/bulletproofs_plus/amount_recovery_result.h \
+  blsct/range_proof/bulletproofs_plus/range_proof.h \
   blsct/range_proof/bulletproofs_plus/range_proof_logic.h \
   blsct/range_proof/bulletproofs_plus/range_proof_with_transcript.h \
-  blsct/range_proof/bulletproofs_plus/range_proof.h \
   blsct/range_proof/bulletproofs_plus/util.h \
   blsct/range_proof/common.h \
   blsct/range_proof/generators.h \
@@ -186,9 +187,9 @@ BLSCT_H = \
   blsct/range_proof/proof_base.h \
   blsct/range_proof/recovered_data.h \
   blsct/range_proof/setup.h \
-  blsct/set_mem_proof/set_mem_proof_setup.h \
   blsct/set_mem_proof/set_mem_proof.h \
   blsct/set_mem_proof/set_mem_proof_prover.h \
+  blsct/set_mem_proof/set_mem_proof_setup.h \
   blsct/signature.h \
   blsct/wallet/address.h \
   blsct/wallet/hdchain.h \
@@ -199,11 +200,11 @@ BLSCT_H = \
   blsct/wallet/verification.h
 
 BLSCT_CPP = \
+  blsct/arith/elements.cpp \
   blsct/arith/mcl/mcl_g1point.cpp \
   blsct/arith/mcl/mcl_scalar.cpp \
-  blsct/arith/elements.cpp \
-  blsct/building_block/generator_deriver.cpp \
   blsct/building_block/g_h_gi_hi_zero_verifier.cpp \
+  blsct/building_block/generator_deriver.cpp \
   blsct/building_block/imp_inner_prod_arg.cpp \
   blsct/building_block/lazy_point.cpp \
   blsct/building_block/lazy_points.cpp \
@@ -211,18 +212,19 @@ BLSCT_CPP = \
   blsct/common.cpp \
   blsct/double_public_key.cpp \
   blsct/eip_2333/bls12_381_keygen.cpp \
+  blsct/external_api/blsct.cpp \
   blsct/private_key.cpp \
   blsct/public_key.cpp \
   blsct/public_keys.cpp \
   blsct/range_proof/bulletproofs/amount_recovery_request.cpp \
   blsct/range_proof/bulletproofs/amount_recovery_result.cpp \
-  blsct/range_proof/bulletproofs/range_proof_logic.cpp \
   blsct/range_proof/bulletproofs/range_proof.cpp \
+  blsct/range_proof/bulletproofs/range_proof_logic.cpp \
   blsct/range_proof/bulletproofs/range_proof_with_transcript.cpp \
   blsct/range_proof/bulletproofs_plus/amount_recovery_request.cpp \
   blsct/range_proof/bulletproofs_plus/amount_recovery_result.cpp \
-  blsct/range_proof/bulletproofs_plus/range_proof_logic.cpp \
   blsct/range_proof/bulletproofs_plus/range_proof.cpp \
+  blsct/range_proof/bulletproofs_plus/range_proof_logic.cpp \
   blsct/range_proof/bulletproofs_plus/range_proof_with_transcript.cpp \
   blsct/range_proof/bulletproofs_plus/util.cpp \
   blsct/range_proof/common.cpp \
@@ -230,10 +232,10 @@ BLSCT_CPP = \
   blsct/range_proof/msg_amt_cipher.cpp \
   blsct/range_proof/proof_base.cpp \
   blsct/set_mem_proof/set_mem_proof.cpp \
-  blsct/set_mem_proof/set_mem_proof_setup.cpp \
   blsct/set_mem_proof/set_mem_proof_prover.cpp \
-  blsct/wallet/verification.cpp \
-  blsct/signature.cpp
+  blsct/set_mem_proof/set_mem_proof_setup.cpp \
+  blsct/signature.cpp \
+  blsct/wallet/verification.cpp
 
 
 .PHONY: FORCE check-symbols check-security
