--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -655,6 +655,7 @@ libbitcoin_consensus_a_SOURCES = \
   script/script.h \
   script/script_error.cpp \
   script/script_error.h \
+  script/sigversion.h \
   serialize.h \
   span.h \
   tinyformat.h \
